docs: add gc options