@@ -32,6 +32,7 @@ $ heroku apps:create your-app
 $ heroku plugins:install java
 $ heroku config:set SPRING_PROFILES_ACTIVE=prod
 $ heroku config:set TZ=Asia/Tokyo
+$ heroku config:set 'JAVA_OPTS=-verbose:gc -Xlog:gc*'
 $ heroku deploy:jar --jar app/build/libs/app.jar --jdk 11
 ```
 
